@@ -1,3 +1,9 @@
+2001-03-13  Michael Yount <csf@moscow.com>
+
+	* lib/Mj/Util.pm:  (n_validate)  Bugfix:  Convert "remind"
+	variable time spans from a string into a number of seconds.
+	(str_to_time)  Support the "s" abbreviation for seconds.
+
 2001-03-11  Michael Yount <csf@moscow.com>
 
 	* README.LINUX:  Describe a workaround for a MakeMaker module
